# ChangeLog for GLSR
# Copyright 1999-2004 Gentoo Foundation
# Distributed under the terms of the GNU General Public License v2
#
# $Id: ChangeLog,v 1.47 2005/01/26 20:59:57 port001 Exp $

CURRENT STATUS: Broken. Various templates/modules need updating/fixing to
                work with the new SiteModule backend. Note: some of the
                templates appear have been broken prior to the SiteModule
                rewrite, but somehow worked. 

26 Jan 2005; Ian Leitch <port001@gentoo.org>:
 * More error handling improvements. 
   Two new functions: error (used to be Logging.err) and error_user
   for printing errors based on invalid user input such as passwords.
 * logwrite now writes to the ErrorReportLog if the logtype is 'error'
 * req, user_details and domain are stored in State for functions that
   need them.
 * Removed sterr_redirect, PITA.

25 Jan 2005; Ian Leitch <port001@gentoo.org>:
 * Added a "Remember me" option on the login screen
 * Updated uncaught exception reporting to work with fcgi

25 Jan 2005; Scott Hadfield <hadfield@gentoo.org>:
 * Template bug fix
 * Added three default values to each multi-dimentional template loop; _counter,
   _is_odd, and _is_even.
 * Implemented the memberlist page
 * Added favorite language to the user table
 * Implemented a user registration page
	 
24 Jan 2005; Scott Hadfield <hadfield@gentoo.org>:
 * Initial code for the memberlist page written
 * Added 'location' and 'website' fields to the user table.
 * Fixed some mixed tabs and spaces.

31 Dec 2004; Ian Leitch <port001@gentoo.org>:
 * As a security measure, site modules now have to specify what methods they need to call.

29 Dec 2004; Ian Leitch <port001@gentoo.org>:
 * New site module parent class: pym/SiteModule.py
 * Updated site modules to use new class

28 Dec 2004; Ian Leitch <port001@gentoo.org>:
 * Replace the 'values' method with a class with methods like the 
   old cgi.FieldStorage

24 Dec 2004; Ian Leitch <port001@gentoo.org>: