@@ -2,12 +2,19 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 #
-# $Id: ChangeLog,v 1.47 2005/01/26 20:59:57 port001 Exp $
+# $Id: ChangeLog,v 1.48 2005/01/27 02:01:54 port001 Exp $
 
 CURRENT STATUS: Broken. Various templates/modules need updating/fixing to
                 work with the new SiteModule backend. Note: some of the
                 templates appear have been broken prior to the SiteModule
                 rewrite, but somehow worked. 
+
+27 Jan 2005; Ian Leitch <port001@gentoo.org>:
+ * Use os.abort() as sys.exit() raises a SystemExit which doesn't
+   play nice with our code.
+ * No longer print exceptions for raised errors, the stack only contains
+   rubbish. It may return if I find a better solution. (Don't realy need 
+   it anyway, the error message tells all we need to know)
 
 26 Jan 2005; Ian Leitch <port001@gentoo.org>:
  * More error handling improvements. 
